--- a/inventory/python/pyproject.toml
+++ b/inventory/python/pyproject.toml
@@ -18,7 +18,7 @@ name = "frinx-inventory-api"
 description = "Frinx Inventory graphql schema transformed to pydantic basemodels"
 authors = ["Jozef Volak <jozef.volak@elisapolystar.com>"]
 version = "0"
-readme = ["README.md", "CHANGELOG.md"]
+readme = ["README.md", "CHANGELOG.md", "RELEASE.md"]
 keywords = ["frinx-machine", "inventory", "api"]
 license = "Apache 2.0"
 
