--- a/utils/graphql-pydantic-converter/pyproject.toml
+++ b/utils/graphql-pydantic-converter/pyproject.toml
@@ -5,6 +5,7 @@ build-backend = "poetry.core.masonry.api"
 [tool.poetry.dependencies]
 python = "^3.10"
 pydantic = "1.10.7"
+requests = "^2.31.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.0.0"
@@ -20,9 +21,9 @@ name = "graphql-pydantic-transformer"
 description = "Convert pydantic schema to pydantic datamodel and build request from it"
 authors = ["Jozef Volak <jozef.volak@elisapolystar.com>"]
 version = '0.0.1'
-readme = ["README.md", "CHANGELOG.md"]
+readme = ["README.md", "CHANGELOG.md", "RELEASE.md"]
 keywords = ["graphql", "pydantic"]
 license = "Apache 2.0"
 
 [tool.poetry.scripts]
-datamodel-codegen = "graphql_pydantic_converter.__main__:main"
+graphql-pydantic-converter = "graphql_pydantic_converter.__main__:main"
