--- a/utils/graphql-pydantic-converter/pyproject.toml
+++ b/utils/graphql-pydantic-converter/pyproject.toml
@@ -5,6 +5,7 @@ build-backend = "poetry.core.masonry.api"
 [tool.poetry.dependencies]
 python = "^3.10"
 pydantic = "1.10.7"
+requests = "^2.31.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.0.0"
@@ -25,4 +26,4 @@ keywords = ["graphql", "pydantic"]
 license = "Apache 2.0"
 
 [tool.poetry.scripts]
-datamodel-codegen = "graphql_pydantic_converter.__main__:main"
+graphql-pydantic-converter = "graphql_pydantic_converter.__main__:main"
