--- a/.github/workflows/release-discovery.yml
+++ b/.github/workflows/release-discovery.yml
@@ -1,17 +1,48 @@
 name: pr-create
+
 on:
   workflow_dispatch:
     inputs:
       image:
         description: 'Docker image name, eg: frinx/schellar:3.0.0'
         required: true
+        default: 'frinx/schellar:latest'
 
 jobs:
   pull-image:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        run: echo "${DOCKER_IMAGE}"
+      - uses: actions/checkout@v3
+#        with:
+#          ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}
+      - name: Validate input
+        run: |
+          echo "IMAGE_NAMESPACE=$(echo $IMAGE | cut -d '/' -f 1)" >> "$GITHUB_ENV"
+          echo "IMAGE_REPO=$(echo $IMAGE | cut -d '/' -f 2 | cut -d ':' -f 1)" >> "$GITHUB_ENV"
+          echo "IMAGE_TAG=$(echo $IMAGE | cut -d ':' -f 2)" >> "$GITHUB_ENV"
         env:
-          DOCKER_IMAGE: ${{ inputs.image }}
+          IMAGE: ${{ inputs.image }}
+      - name: Start service
+        run: |
+          echo "${IMAGE_NAMESPACE} ${IMAGE_REPO} ${IMAGE_TAG}"
+          docker compose -f ${IMAGE_REPO}/python/docker-compose.yml up -d
+      - name: Check changed files
+        uses: tj-actions/verify-changed-files@v16
+        id: verify-changed-files
+      - name: Update changelog
+        if: steps.verify-changed-files.outputs.files_changed == 'true'
+        run: |
+          ./.github/scripts/release-update --image-tag ${IMAGE_TAG} --lib-version 1.0.0 --path ${IMAGE_REPO}/python/RELEASE.md
+      - name: Create Pull Request
+        if: steps.verify-changed-files.outputs.files_changed == 'true'
+        uses: peter-evans/create-pull-request@v5
+        with:
+          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+          title: "[${{ env.IMAGE_REPO }}] Release package for ${{ env.IMAGE_TAG }}"
+          commit-message: "[${{ env.IMAGE_REPO }}] Create and publish packages for ${IMAGE}"
+          branch-suffix: timestamp
+          labels: automated-pr
+          delete-branch: true
+          reviewers: Jozefiel
+          body: |
+            Create and publish packages for ${{ env.IMAGE_REPO }}
