--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -20,18 +20,13 @@ jobs:
           check_filenames: true
           check_hidden: false
 
-  ruff:
+  code-validate:
+    name: Validate code
     runs-on: ubuntu-latest
-    permissions:
-      pull-requests: read
-    outputs:
-      python-api-packages: ${{ steps.python.outputs.changes }}
     steps:
     - uses: actions/checkout@v3
-    - uses: chartboost/ruff-action@v1
-    - uses: tsuyoshicho/action-mypy@v3
+    - uses: actions/setup-python@v4
       with:
-        github_token: ${{ secrets.github_token }}
-        reporter: github-pr-review
-        level: warning
-        workdir: .
+        python-version: "3.10"
+    - run: pip3 install -r requirements.txt
+    - run: python3 -m ruff .
