--- a/.mypy.ini
+++ b/.mypy.ini
@@ -1,6 +1,6 @@
 [mypy]
-python_version = "3.10"
-plugins = [ "pydantic.mypy" ]
+python_version = 3.10
+plugins = pydantic.mypy
 explicit_package_bases = true
 namespace_packages = true
 strict = true
