--- a/resource-manager/python/pyproject.toml
+++ b/resource-manager/python/pyproject.toml
@@ -18,7 +18,7 @@ packages = [{ include = "frinx_api" }]
 name = "frinx-resource-manager-api"
 description = "Frinx Resource Manager graphql schema transformed to pydantic BaseModels"
 authors = ["Jozef Volak <jozef.volak@elisapolystar.com>"]
-version = "0.0.1" # dynamically generated
+version = "1.0.0" # dynamically generated
 readme = ["README.md", "CHANGELOG.md", "RELEASE.md"]
 keywords = ["frinx-machine", "resource-manager", "api"]
 license = "Apache 2.0"
@@ -37,7 +37,7 @@ extend-select = ['Q', 'RUF100', 'C90', 'UP', 'I', 'E', 'F', 'N', 'PL']
 fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
 ignore = ["E501"]
 
-target-version = "py310"
+target-version = "1.0.0"
 
 [tool.ruff.isort]
 known-first-party = ['frinx_api']
@@ -63,7 +63,7 @@ keep-runtime-typing = true
 classmethod-decorators = ["classmethod", "pydantic.validator", "pydantic.root_validator"]
 
 [tool.mypy]
-python_version = "3.10"
+python_version = "1.0.0"
 plugins = [ "pydantic.mypy" ]
 explicit_package_bases = true
 namespace_packages = true
